2009-01-30  Hans Breuer  <hans@breuer.org>

	* objects/Jackson/domain.c : remove superfluous allocation to avoid
	leaking it, fixes bug #569720

	* app/load_save.c : do not complain about missing object types per 
	layer but just once per diagram

	* app/confirm.c : there is no glib-3.16 yet

2009-02-27  Steffen Macke <sdteffen@sdteffen.de>

	* doc/en/usage-objects.xml: Finished incomplete sentence. Fixes
	bug #569369

2009-01-24  Hans Breuer  <hans@breuer.org>

	* lib/message.[ch] lib/libdia.def : new function dia_log_message() 
	which prints the given string together with a time-stamp, but only 
	if logging is enabled
	* app/app_procs.c lib/dialib.[ch] : when given --verbose enable logging
	* lib/plug-ins.c lib/sheet.c : sprinkled some dia_log_message() to get
	a grip on Dia's start-up performance (4 secs for python plug-in, 5 secs
	for custom plug-in - when started from cold caches)
	
	* app/confirm.[ch] : new function confirm_export_size() which let's the
	user confirm an unusal diagram size (conditionalized glib-2-16 function)
	* app/Makefile.am app/makefile.msc po/POTFILES.in : add new files
	* app/commands.c app/filedlg.c : use it before export and print to avoid
	possibly unintended numbers of pages printed or memory used for export.
	(Bug #540477, Martin Wegner)

	app/preferences.[ch] : removed obsolete print preference

	* objects/SISSI/area.c objects/SISSI/faraday.c objects/SISSI/room.c
	  objects/SISSI/sissi.[ch] objects/SISSI/sissi_dialog.c
	  objects/SISSI/sissi_object.c objects/SISSI/site.c : fixed object
	method DiaObject::apply_props_from_dialog() for the last known issue
	with changing multiple objects properties, bug #60331
	(It did not crash because the SISSI object don't contribute anything
	to the property list.)
	* objects/SISSI/sissi_object.c(280) : local variable 'filename' used
	without having been initialized
	* objects/SISSI/sissi_dialog.c(380) : incompatible types - from 
	'struct _GtkWidget *' to 'struct _GtkScrolledWindow *'

	[